[project]
name = "agentic-system-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langchain[anthropic,openai]>=0.3.27",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-sdk>=0.2.5",
    "tavily-python>=0.7.11",
]
