[project]
name = "agentic-system-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "langchain[anthropic,openai]>=0.3.27",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-sdk>=0.2.5",
    "tavily-python>=0.7.11",
]
